# Anomaly-Guard-

./: .dockerignore  .env.example  .gitignore  Dockerfile  EVALUATION.md  README.md  app.py  demo.py  evaluate.py  fixer.py  inference.py  inference.py.backup_20260407_210446  inference_output.txt  openenv.yaml  pyproject.toml  requirements.txt  test_feature1.py  test_features.py  test_llama1b.py  test_new_features.py  validate_all.ps1
app/: __init__.py  baseline.py  environment.py  explainability.py  grader.py  main.py  models.py  real_data.py  scenarios.py
app/agents/: adversarial_attacker.py  multi_agent_coordinator.py
app/business/: roi_calculator.py
app/compliance/: __init__.py  eu_ai_act_engine.py
app/core/: curriculum_manager.py  environment_base.py  environment_multiagent.py
app/grading/: grader_robust.py  verifiers.py
app/rewards/: __init__.py  anti_hacking.py  reward_calculator.py
app/scenarios/: __init__.py  network_topology.py  procedural_attacks.py  realistic_attacks.py  scenario_base.py  threat_intel_live.py
app/testing/: __init__.py  adversarial_tester.py  eu_ai_act_evaluator.py
dashboard/: app.py
demos/: demo_anti_hacking.py  demo_realistic_scenarios.py
results/: baseline_results.json  before_after_results.json  trained_results.json
server/: __init__.py  app.py
tests/: __init__.py  test_enhancements.py  test_environment.py  test_full_integration.py  test_multiagent.py  test_unsloth.py
training/: train_coevolution.py  train_grpo.py
